--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
 
         <div id="pagepiling">
             <div class="section center" id="home">
-                <img id="avatar" src="./imgs/favicon.jpg" />
+                <img id="avatar" src="./imgs/avatar.png" />
                 <h1 id="title">胡锦亮</h1>
-               
+                <p id="subtitle">每一天的努力终将造就无限的可能</p>
+                <h4>前端工程师</h4>
+                <p>
+                	<a href="mailto:1541471@tongji.edu.cn">
+                		1541471@tongji.edu.cn
+                	</a>
+                </p>
 
                
             </div>
