项目页设计

--- a/index.html
+++ b/index.html
@@ -50,6 +50,33 @@
             
             <div class="section center" id="project">
                 <h1>项目经验</h1>
+                <div class="project-container">
+                    <div class="project-item">
+                        <h4>地铁在线养护系统（同岩公司合作项目）</h4>
+                        <p>2015.10 - 2016.10</p>
+                        <p>前端工程师</p>
+                        <div class="content-container">
+                            主要使用WebGL完成场景加载和交互功能<br>
+                            1.使用JS解析数据得到模型数据<br>
+                            2.使用WebGL的框架Threejs绘制模型<br>
+                            3.使用JS实现场景漫游和场景交互等功能<br>
+                            4. 实现增删养护信息的功能<br>
+                        </div>
+                    </div>
+                    <div class="project-item">
+                        <h4>智慧城市（北京首钢股份有限公司合作项目）</h4>
+                        <p>2016.05 - 至今</p>
+                        <p>前端工程师</p>
+                        <div class="content-container">
+                            主要使用WebGL实现建筑模型渲染以及漫游交互 <br>
+                            1. 研究大规模场景在浏览器端加载方面的困难和限制 <br>
+                            2. 探索该问题在前端方面的解决方案<br>
+                            3.使用JS实现第一人称漫游以及碰撞检测<br>
+                            4. 实现控件的布局和基础交互功能<br>
+                        </div>
+                    </div>
+                </div>
+
                
             </div>
 
