响应式设计

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             4. 实现增删养护信息的功能<br>
                         </div>
                     </div>
-                    <div class="project-item">
+                    <div class="project-item item2">
                         <h4>智慧城市（北京首钢股份有限公司合作项目）</h4>
                         <p>2016.05 - 至今</p>
                         <p>前端工程师</p>
@@ -84,7 +84,7 @@
                 <h1>作品展示</h1>
                 <div class="works-container">
                     <div class="row">
-                         <figure class="work-item">
+                         <figure class="work-item item1">
                             <img src='./imgs/work1.png' />
                             <figcaption>               
                                 <div class="img-back">
